kubernetes/argo-cd/applications/production-hm/confluent-schema-registry/kubernetes-manifests/hm-confluent-schema-registry-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-confluent-schema-registry-deployment
  namespace: production-hm-confluent-schema-registry
  labels:
    app.kubernetes.io/name: hm-confluent-schema-registry-deployment
    app.kubernetes.io/part-of: production-hm-confluent-schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hm-confluent-schema-registry
  template:
    metadata:
      labels:
        app: hm-confluent-schema-registry
    spec:
      serviceAccountName: hm-confluent-schema-registry-service-account
      containers:
        - name: confluent-schema-registry
          image: ghcr.io/hongbo-miao/hm-confluent-schema-registry:latest
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 100m
              memory: 1Gi
          ports:
            - name: schema-registry
              protocol: TCP
              containerPort: 8081
          # https://docs.confluent.io/platform/current/schema-registry/installation/config.html
          # https://docs.confluent.io/platform/current/installation/docker/config-reference.html#sr-long-configuration
